Fixed z-index of back-to-top where it's over the team modals

--- a/css/style.css
+++ b/css/style.css
@@ -653,7 +653,7 @@ p.footertext {
     display:none;
     width:50px;
     height:50px;
-    z-index:1137;
+    z-index:1039;
     border-radius: 50%;
     padding-top:10px;
 }
